--- a/UI/registration.ui
+++ b/UI/registration.ui
@@ -18,7 +18,7 @@
     <rect>
      <x>180</x>
      <y>10</y>
-     <width>171</width>
+     <width>221</width>
      <height>61</height>
     </rect>
    </property>
@@ -35,9 +35,9 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>100</x>
      <y>140</y>
-     <width>151</width>
+     <width>161</width>
      <height>21</height>
     </rect>
    </property>
@@ -66,7 +66,7 @@
     <rect>
      <x>130</x>
      <y>80</y>
-     <width>111</width>
+     <width>131</width>
      <height>20</height>
     </rect>
    </property>
@@ -95,7 +95,7 @@
     <rect>
      <x>120</x>
      <y>200</y>
-     <width>111</width>
+     <width>131</width>
      <height>31</height>
     </rect>
    </property>
@@ -142,6 +142,22 @@
      <width>113</width>
      <height>21</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="face_label">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>200</y>
+     <width>40</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
