--- a/UI/menu.ui
+++ b/UI/menu.ui
@@ -51,7 +51,7 @@
    <string>Face Recognition Sign-In System</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources/face.qrc">
+   <iconset resource="resources/menu.qrc">
     <normaloff>:/icon/logo_round.png</normaloff>:/icon/logo_round.png</iconset>
   </property>
   <property name="autoFillBackground">
@@ -156,7 +156,7 @@
      <string>Registration</string>
     </property>
     <property name="icon">
-     <iconset resource="resources/face.qrc">
+     <iconset resource="resources/menu.qrc">
       <normaloff>:/icon/register_icon.png</normaloff>:/icon/register_icon.png</iconset>
     </property>
     <property name="iconSize">
@@ -209,10 +209,10 @@
 }</string>
     </property>
     <property name="text">
-     <string>Identification</string>
+     <string>   Sign  in       </string>
     </property>
     <property name="icon">
-     <iconset resource="resources/face.qrc">
+     <iconset resource="resources/menu.qrc">
       <normaloff>:/icon/sign in.png</normaloff>:/icon/sign in.png</iconset>
     </property>
     <property name="iconSize">
@@ -241,7 +241,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="resources/face.qrc">:/imageView/logo_total.png</pixmap>
+     <pixmap resource="resources/menu.qrc">:/imageView/logo_total.png</pixmap>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -279,10 +279,10 @@
    <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>280</y>
-      <width>531</width>
-      <height>281</height>
+      <x>60</x>
+      <y>260</y>
+      <width>501</width>
+      <height>311</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -316,7 +316,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="resources/face.qrc">:/background/background.jpg</pixmap>
+        <pixmap resource="resources/menu.qrc">:/background/background.jpg</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -332,7 +332,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="resources/face.qrc">:/background/background.jpg</pixmap>
+        <pixmap resource="resources/menu.qrc">:/background/background.jpg</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -348,7 +348,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="resources/face.qrc">:/background/background.jpg</pixmap>
+        <pixmap resource="resources/menu.qrc">:/background/background.jpg</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -370,7 +370,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="resources/face.qrc">:/background/background.jpg</pixmap>
+        <pixmap resource="resources/menu.qrc">:/background/background.jpg</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -386,7 +386,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="resources/face.qrc">:/background/background.jpg</pixmap>
+        <pixmap resource="resources/menu.qrc">:/background/background.jpg</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -402,7 +402,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="resources/face.qrc">:/background/background.jpg</pixmap>
+        <pixmap resource="resources/menu.qrc">:/background/background.jpg</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -470,7 +470,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="resources/face.qrc"/>
+  <include location="resources/menu.qrc"/>
  </resources>
  <connections>
   <connection>
