--- a/templates/tasks/retroactive.html
+++ b/templates/tasks/retroactive.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Retroactive Record</title>
 </head>
 <body>
-$END$
+<p>
+    Retroactive Record page
+</p>
 </body>
 </html>
