--- a/templates/tasks/sign_in.html
+++ b/templates/tasks/sign_in.html
@@ -1,10 +1,139 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Sign-In Record</title>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/dist/css/AdminLTE.min.css">
 </head>
+
 <body>
-$END$
+
+<div style="padding-left: 50px;padding-top: 25px;">
+    <p style="padding-bottom: 20px">
+        Please Choose Course:
+        <select id="dropdown">
+            {% for course in all_course %}
+            <option id="name" value="{{ course.cid }}">
+                Weekday {{ course.weekday }} : {{ course.name }}
+            </option>
+            {% endfor %}
+        </select>
+    </p>
+    <p style="padding-bottom: 20px">
+        Please Choose Date:
+        <input type="date" id="chosen_date" >
+    </p>
+</div>
+<script type="text/javascript">
+    var dropdown=$("#dropdown")
+    var chosen_date=$("#chosen_date")
+
+    $(document).ready(function() {
+        var date = new Date();
+
+        var day = date.getDate();
+        var month = date.getMonth() + 1;
+        var year = date.getFullYear();
+
+        if (month < 10) month = "0" + month;
+        if (day < 10) day = "0" + day;
+
+        var today = year + "-" + month + "-" + day;
+        chosen_date.attr("value", today);
+        renew()
+    });
+
+    <!-- send get request when course is changed-->
+    dropdown.change(renew)
+    chosen_date.change(renew)
+
+    function renew(){
+        var cid = dropdown.val();
+        var date= chosen_date.val();
+        $.get("/tasks/api?cid="+cid+"&date="+date,function (data){
+            var value = JSON.parse(data)
+            $("#total_student").text(value['total_student'])
+            $("#sign_in_no").text(value['sign_in_num'])
+            $("#not_sign_in_no").text(value['not_sign_in_num'])
+            $("#percentage").text(value['percentage']+"%")
+        })
+    }
+
+</script>
+<div class="wrapper">
+ <!-- Main content -->
+    <section class="content">
+      <div class="container-fluid">
+        <!-- Small boxes (Stat box) -->
+        <div class="row">
+          <div class="col-sm-3">
+            <!-- small box -->
+            <div class="small-box bg-info">
+              <div class="inner">
+                <h3 id="total_student">#</h3>
+
+                <p>Total Students</p>
+              </div>
+              <div class="icon">
+                <i class="ion ion-bag"></i>
+              </div>
+              <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+          </div>
+          <!-- ./col -->
+          <div class="col-sm-3">
+            <!-- small box -->
+            <div class="small-box bg-success">
+              <div class="inner">
+                <h3 id="sign_in_no">#</h3>
+                <p>Sign-In Number</p>
+              </div>
+              <div class="icon">
+                <i class="ion ion-stats-bars"></i>
+              </div>
+              <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+          </div>
+          <!-- ./col -->
+             <div class="col-sm-3">
+            <!-- small box -->
+            <div class="small-box bg-info">
+              <div class="inner">
+                <h3 id="not_sign_in_no">#</h3>
+
+                <p>Not Sign-In Number</p>
+              </div>
+              <div class="icon">
+                <i class="ion ion-bag"></i>
+              </div>
+              <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+          </div>
+          <!-- ./col -->
+          <div class="col-sm-3">
+            <!-- small box -->
+            <div class="small-box bg-success">
+              <div class="inner">
+                <h3 id="percentage">#</h3>
+
+                <p>Sign-In Percentage</p>
+              </div>
+              <div class="icon">
+                <i class="ion ion-stats-bars"></i>
+              </div>
+              <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+          </div>
+          <!-- ./col -->
+
+        </div>
+      </div>
+    </section>
+  </div>
 </body>
-</html>
