--- a/templates/tasks/sign_in.html
+++ b/templates/tasks/sign_in.html
@@ -8,7 +8,8 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Theme style -->
-    <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="https://adminlte.io/themes/AdminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://adminlte.io/themes/AdminLTE/dist/css/AdminLTE.min.css">
 </head>
 
@@ -19,22 +20,22 @@
         Please Choose Course:
         <select id="dropdown">
             {% for course in all_course %}
-            <option id="name" value="{{ course.cid }}">
-                Weekday {{ course.weekday }} : {{ course.name }}
-            </option>
+                <option id="name" value="{{ course.cid }}">
+                    Weekday {{ course.weekday }} : {{ course.name }}
+                </option>
             {% endfor %}
         </select>
     </p>
     <p style="padding-bottom: 20px">
         Please Choose Date:
-        <input type="date" id="chosen_date" >
+        <input type="date" id="chosen_date">
     </p>
 </div>
 <script type="text/javascript">
-    var dropdown=$("#dropdown")
-    var chosen_date=$("#chosen_date")
+    var dropdown = $("#dropdown")
+    var chosen_date = $("#chosen_date")
 
-    $(document).ready(function() {
+    $(document).ready(function () {
         var date = new Date();
 
         var day = date.getDate();
@@ -49,91 +50,123 @@
         renew()
     });
 
-    <!-- send get request when course is changed-->
+    //send get request when course is changed
     dropdown.change(renew)
     chosen_date.change(renew)
 
-    function renew(){
+    function renew() {
         var cid = dropdown.val();
-        var date= chosen_date.val();
-        $.get("/tasks/api?cid="+cid+"&date="+date,function (data){
+        var date = chosen_date.val();
+        $.get("/tasks/api?cid=" + cid + "&date=" + date, function (data) {
             var value = JSON.parse(data)
             $("#total_student").text(value['total_student'])
             $("#sign_in_no").text(value['sign_in_num'])
             $("#not_sign_in_no").text(value['not_sign_in_num'])
-            $("#percentage").text(value['percentage']+"%")
+            $("#percentage").text(value['percentage'] + "%")
+            $("#late_number").text(value['late_num'])
+            $("#late_percentage").text(value['late_percentage'] + "%")
         })
     }
 
 </script>
 <div class="wrapper">
- <!-- Main content -->
+    <!-- Main content -->
     <section class="content">
-      <div class="container-fluid">
-        <!-- Small boxes (Stat box) -->
-        <div class="row">
-          <div class="col-sm-3">
-            <!-- small box -->
-            <div class="small-box bg-info">
-              <div class="inner">
-                <h3 id="total_student">#</h3>
+        <div class="container-fluid">
+            <!-- Small boxes (Stat box) -->
+            <div class="row">
+                <div class="col-sm-3">
+                    <!-- small box -->
+                    <div class="small-box bg-info">
+                        <div class="inner">
+                            <h3 id="total_student">#</h3>
 
-                <p>Total Students</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-bag"></i>
-              </div>
-              <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-sm-3">
-            <!-- small box -->
-            <div class="small-box bg-success">
-              <div class="inner">
-                <h3 id="sign_in_no">#</h3>
-                <p>Sign-In Number</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-stats-bars"></i>
-              </div>
-              <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-             <div class="col-sm-3">
-            <!-- small box -->
-            <div class="small-box bg-info">
-              <div class="inner">
-                <h3 id="not_sign_in_no">#</h3>
+                            <p>Total Students</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-bag"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-sm-3">
+                    <!-- small box -->
+                    <div class="small-box bg-success">
+                        <div class="inner">
+                            <h3 id="sign_in_no">#</h3>
+                            <p>Sign-In Number</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-sm-3">
+                    <!-- small box -->
+                    <div class="small-box bg-success">
+                        <div class="inner">
+                            <h3 id="percentage">#</h3>
 
-                <p>Not Sign-In Number</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-bag"></i>
-              </div>
-              <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+                            <p>On Time Sign-In Percentage</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
             </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-sm-3">
-            <!-- small box -->
-            <div class="small-box bg-success">
-              <div class="inner">
-                <h3 id="percentage">#</h3>
+            <div class="row">
+                <!-- ./col -->
+                <div class="col-sm-3">
+                    <!-- small box -->
+                    <div class="small-box bg-warning">
+                        <div class="inner">
+                            <h3 id="not_sign_in_no">#</h3>
 
-                <p>Sign-In Percentage</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-stats-bars"></i>
-              </div>
-              <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+                            <p>Not Sign-In Number</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-bag"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-sm-3">
+                    <!-- small box -->
+                    <div class="small-box bg-danger">
+                        <div class="inner">
+                            <h3 id="late_number">#</h3>
+
+                            <p>Late Number</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-sm-3">
+                    <!-- small box -->
+                    <div class="small-box bg-danger">
+                        <div class="inner">
+                            <h3 id="late_percentage">#</h3>
+
+                            <p>Late Percentage</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More Info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
             </div>
-          </div>
-          <!-- ./col -->
-
         </div>
-      </div>
     </section>
-  </div>
+</div>
 </body>
